k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lite-chat-circle
spec:
  selector:
    matchLabels:
      app: lite-chat-circle
  replicas: 1
  template:
    metadata:
      labels:
        app: lite-chat-circle
    spec:
      containers:
        - name: lite-chat-circle
          image: funtuan/lite-chat-circle:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
