k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lite-chat-circle
spec:
  type: ClusterIP
  selector:
    app: lite-chat-circle
  ports:
    - port: 80
      targetPort: 80
