k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lite-chat-ingress
  labels:
    app: lite-chat-circle
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ncc.funtuan.dev
      secretName: ncc-tls
  rules:
    - host: ncc.funtuan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lite-chat-circle
                port:
                  number: 80
